--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <artifactId>entando-plugin-jpsolr</artifactId>
     <groupId>org.entando.entando.plugins</groupId>
+    <version>6.5.0</version>
     <packaging>war</packaging>
     <name>Entando Plugin: Solr Connector</name>
     <description>Enables the use of Solr as search engine</description>
@@ -106,7 +107,7 @@
             <dependency>
                 <groupId>org.entando</groupId>
                 <artifactId>entando-core-bom</artifactId>
-                <version>6.2.272</version>
+                <version>6.5.0-ECS-211</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
