--- a/src/test/config/conf/systemParams.properties
+++ b/src/test/config/conf/systemParams.properties
@@ -70,8 +70,8 @@ jacms.imgMetadata.ignoreKeys=Blue TRC,Red TRC,Green TRC
 ##----------------------
 ## Database configuration
 
-## migration strategy - disabled|auto|generate_sql
-db.migration.strategy=auto
+## check db schema on startup - true|false
+db.startup.check=true
 
 db.restore.enabled=true
 
